# ovos-skill-blackstories

./: MANIFEST.in  README.md  pyproject.toml
ovos_blackstories/: __init__.py  riddles.json
ovos_blackstories/locale/en-us/dialog/: error.answer.dialog  error.no_api_key.dialog  error.start.dialog
ovos_blackstories/locale/en-us/intents/: black_story.intent  black_story.new.intent
ovos_blackstories/locale/nl-nl/dialog/: error.answer.dialog  error.no_api_key.dialog  error.start.dialog
ovos_blackstories/locale/nl-nl/intents/: black_story.intent  black_story.new.intent
